@startuml modelo-er-base-datos
!theme plain
skinparam linetype ortho
skinparam backgroundColor white
skinparam shadowing false
skinparam classAttributeIconSize 0

title Modelo Entidad-Relacion — TEA Link\nPostgreSQL · schema.prisma (Jun 2026 · 11 tablas)

entity instituciones {
  * id : INT <<PK>>
  --
  nombre : VARCHAR
  tipo : ENUM
  region : ENUM
  comuna : VARCHAR
  direccion : VARCHAR
  catalogo_establecimiento_id : INT <<FK,UK>>
}

entity catalogo_establecimientos {
  * id : INT <<PK>>
  --
  fuente : ENUM
  codigo_externo : VARCHAR
  nombre : VARCHAR
  tipo_oficial : VARCHAR
  region : ENUM
}

entity usuarios {
  * id : INT <<PK>>
  --
  email : VARCHAR <<UK>>
  password_hash : VARCHAR
  nombre_completo : VARCHAR
  rol : ENUM
  must_change_password : BOOLEAN
  institucion_id : INT <<FK>>
}

entity perfiles {
  * id : INT <<PK>>
  --
  rut : VARCHAR <<UK>>
  nombre : VARCHAR
  edad : INT
  fecha_nacimiento : DATE
  diagnostico_clinico : ENUM
  nivel_educacional : ENUM
  consentimiento_estado : ENUM
  consentimiento_sujeto : ENUM
  consentimiento_por_usuario_id : INT <<FK>>
  institucion_id : INT <<FK>>
}

entity perfil_usuario {
  * perfil_id : INT <<PK,FK>>
  * usuario_id : INT <<PK,FK>>
  --
  rol_en_perfil : ENUM
  puede_editar : BOOLEAN
  consentimiento_aceptado_at : TIMESTAMP
}

entity solicitudes_institucion_perfil {
  * id : INT <<PK>>
  --
  perfil_id : INT <<FK>>
  institucion_solicitante_id : INT <<FK>>
  institucion_invitada_id : INT <<FK>>
  estado : ENUM
}

entity observaciones {
  * id : INT <<PK>>
  --
  titulo : VARCHAR
  descripcion : TEXT
  categoria : ENUM
  privacidad : ENUM
  perfil_id : INT <<FK>>
  autor_id : INT <<FK>>
}

entity reportes {
  * id : INT <<PK>>
  --
  titulo : VARCHAR
  formato : ENUM
  creador_id : INT <<FK>>
}

entity observaciones_en_reportes {
  * reporte_id : INT <<PK,FK>>
  * observacion_id : INT <<PK,FK>>
}

entity auditoria_admin {
  * id : INT <<PK>>
  --
  admin_id : INT <<FK>>
  accion : VARCHAR
  entidad : VARCHAR
}

entity auditoria_observacion {
  * id : INT <<PK>>
  --
  usuario_id : INT <<FK>>
  observacion_id : INT <<FK>>
  perfil_id : INT <<FK>>
  reporte_id : INT
  accion : VARCHAR
  privacidad : ENUM
  detalles : VARCHAR
}

instituciones ||--o| catalogo_establecimientos : alta_desde_catalogo
instituciones ||--o{ usuarios : tiene
instituciones ||--o{ perfiles : custodia
usuarios ||--o{ perfiles : consentimiento_tutor
usuarios ||--o{ observaciones : autor
perfiles ||--o{ observaciones : contiene
usuarios }o--o{ perfil_usuario : equipo
perfiles }o--o{ perfil_usuario : equipo
perfiles ||--o{ solicitudes_institucion_perfil : colaboracion
instituciones ||--o{ solicitudes_institucion_perfil : solicita_invita
usuarios ||--o{ reportes : crea
reportes ||--o{ observaciones_en_reportes
observaciones ||--o{ observaciones_en_reportes
usuarios ||--o{ auditoria_admin : registra_admin
usuarios ||--o{ auditoria_observacion : traza_sensible
observaciones ||--o{ auditoria_observacion : acceso
perfiles ||--o{ auditoria_observacion : perfil_afectado

note bottom of perfiles
  RUT unico nacional
  Consentimiento tutor/titular
  Ver perfilConsentimiento.ts
end note

note right of solicitudes_institucion_perfil
  Colaboracion interinstitucional
  Cesion de custodia al aceptar
end note

note right of auditoria_observacion
  MULTINIVEL y PRIVADA
  Crear, editar, consultar,
  listar, exportar reporte
end note

note bottom of instituciones
  11 tablas · 3FN
  Ver INFORME-TECNICO seccion 3.3
end note

@enduml
